feat: implement JWT-based security configuration and add AdminDashboard UI component